--- a/src/classes/CadenceScheduler.cls
+++ b/src/classes/CadenceScheduler.cls
@@ -6,15 +6,15 @@ global class CadenceScheduler implements schedulable{
        if (runningBatch == 0){
             // Schedule batch for Contact
             PerformCadenceActionBatch con=new PerformCadenceActionBatch(new List<string>{CadenceConstants.CONTACT_OBJECT_NAME, CadenceConstants.ACCOUNT_OBJECT_NAME});
-            Database.executeBatch(con,1000);
+            Database.executeBatch(con,500);
             
             // Schedule batch for lead
             PerformCadenceActionBatch led=new PerformCadenceActionBatch(new List<string>{CadenceConstants.LEAD_OBJECT_NAME, CadenceConstants.DB_OBJECT_NAME});
-            Database.executeBatch(led,1000);
+            Database.executeBatch(led,500);
 
 			// Schedule batch for opportunity
-            PerformCadenceActionBatch opportunity=new PerformCadenceActionBatch(new List<string>{CadenceConstants.OPPORTUNITY_OBJECT_NAME, CadenceConstants.ACCOUNT_OBJECT_NAME,CadenceConstants.CONTRACT_OBJECT_NAME,CadenceConstants.PRICE_BOOK_OBJECT_NAME});
-            Database.executeBatch(opportunity,1000);
+           /* PerformCadenceActionBatch opportunity=new PerformCadenceActionBatch(new List<string>{CadenceConstants.OPPORTUNITY_OBJECT_NAME, CadenceConstants.ACCOUNT_OBJECT_NAME,CadenceConstants.CONTRACT_OBJECT_NAME,CadenceConstants.PRICE_BOOK_OBJECT_NAME});
+            Database.executeBatch(opportunity,1000); */
             // Schedule next cadence scheduler
         }
         CadenceUtil.scheduleNextCadenceScheduler(nextScheduleTime);
